# board_study/src/main/java/com/example/board_study/controller/dto/post/PostResponse.java
@@ -16,6 +16,10 @@ public class PostResponse {
     private String title;
     @Schema(description = "게시글 내용", example = "내용입니다.")
     private String content;
+    @Schema(description = "작성자", example = "user1")
+    private String username;
+    @Schema(description = "작성시간", example = "2024-01-01 12:00")
+    private String createdAt;
     @Schema(description = "댓글 리스트")
     private List<CommentResponse> comments;
 }
